--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+appdirs==1.4.4
+black==20.8b1
 certifi==2020.11.8
 chardet==3.0.4
 click==7.1.2
 fastapi==0.62.0
 h11==0.11.0
 idna==2.10
+mypy-extensions==0.4.3
+pathspec==0.8.1
 pydantic==1.7.3
+regex==2020.11.13
 requests==2.25.0
 starlette==0.13.6
+toml==0.10.2
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 ujson==4.0.1
 urllib3==1.26.2
 uvicorn==0.12.3
