--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ certifi==2020.11.8
 chardet==3.0.4
 click==7.1.2
 fastapi==0.62.0
+gunicorn==20.0.4
 h11==0.11.0
+httptools==0.1.1
 idna==2.10
 mypy-extensions==0.4.3
 pathspec==0.8.1
@@ -18,3 +20,4 @@ typing-extensions==3.7.4.3
 ujson==4.0.1
 urllib3==1.26.2
 uvicorn==0.12.3
+uvloop==0.14.0
