--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.4
+attrs==20.3.0
 black==20.8b1
 certifi==2020.11.8
 chardet==3.0.4
@@ -8,9 +9,15 @@ gunicorn==20.0.4
 h11==0.11.0
 httptools==0.1.1
 idna==2.10
+iniconfig==1.1.1
 mypy-extensions==0.4.3
+packaging==20.8
 pathspec==0.8.1
+pluggy==0.13.1
+py==1.10.0
 pydantic==1.7.3
+pyparsing==2.4.7
+pytest==6.2.1
 regex==2020.11.13
 requests==2.25.0
 starlette==0.13.6
