--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Requirements
       run: |
-        pip install -r requirements.txt;
+        make install
     - name: Run Tests
       run: |
-        python -m pytest
+        make test
